--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "date-fns": "^3.6.0",
     "echarts": "^5.5.0",
     "echarts-for-react": "^3.0.2",
+    "framer-motion": "^11.2.10",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
